--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
             "label": "(Linux) C/C++: g++ build active file",
             "command": "/usr/bin/g++",
             "args": [
+                "-std=c++11",
                 "-g",
                 "${file}",
                 "-o",
@@ -43,6 +44,7 @@
             "label": "C/C++: g++ build active file ver(1)",
             "command": "/usr/bin/g++",
             "args": [
+                "-std=c++11",
                 "-g",
                 "${file}",
                 "-o",
