--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,40 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(Linux) g++ - Build and debug active file",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [
-                "1",
-                "10",
-                "-1"
-            ],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "(Linux) C/C++: g++ build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
-        },
-        {
             "name": "g++ - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [
-                "0",
-                "100",
-                "-1"
-            ],
+            "args": ["10"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -52,7 +23,7 @@
                 }
             ],
             "preLaunchTask": "C/C++: g++ build active file",
-            "miDebuggerPath": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\gdb.exe"
+            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
